Bug 613634, make the 3rd paramater of add/removeEventListener optional, r=sicking